# rest_ecommerce

./: .coveragerc  .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties  testdb.sqlite3
common/: views.py
config/: celery.py  celery_app.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: celery_app.py
core/utils/: email.py
documentation/: schema_view_swagger.py
product_app/: admin.py  constants.py  models.py
product_app/api/: serializers.py  urls.py  views.py
product_app/migrations/: 0001_initial.py  0002_product_category.py
templates/email/: confirm_register.html
tests/product_app/apis/: test_create_product.py
tests/product_app/factories/: product.py
tests/user_profile/: utils.py
tests/user_profile/apis/: test_create_user.py
tests/user_profile/factories/: user.py
user_profile/: admin.py  apps.py  models.py
user_profile/api/: authentication.py  authentication_mixins.py  serializers.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py  0002_alter_userprofile_is_active.py  0002_rename_password.py  0003_add_encrypted_password.py  0004_migrate_data.py  0005_delete_old_password.py
user_profile/tasks/: __init__.py  task_send_verification.py
